--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@automapper/classes": "^8.7.7",
+    "@automapper/core": "^8.7.7",
     "@types/dinero.js": "^1.9.0",
-    "@types/three": "^0.150.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.29.3",
     "dinero": "^1.0.1",
-    "three": "^0.151.3"
+    "fflate": "^0.7.4",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
